force-app/main/default/objects/BackupItem__c/BackupItem__c.object-meta.xml
<CustomObject>
    <description>Stores backup information for components before API version upgrades</description>
    <label>Backup Item</label>
    <nameField>
        <displayFormat>BKP-{0000}</displayFormat>
        <label>Backup Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backup Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>