force-app/main/default/objects/BackupItem__c/fields/ArtifactType__c.field-meta.xml
<CustomField>
    <fullName>ArtifactType__c</fullName>
    <description>Type of the backed up component</description>
    <label>Artifact Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>