force-app/main/default/objects/BackupItem__c/fields/BackupCreatedAt__c.field-meta.xml
<CustomField>
    <fullName>BackupCreatedAt__c</fullName>
    <description>Date and time when the backup was created</description>
    <label>Backup Created At</label>
    <type>DateTime</type>
</CustomField>