force-app/main/default/objects/BackupItem__c/fields/ChangeItem__c.field-meta.xml
<CustomField>
    <fullName>ChangeItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the change item this backup is for</description>
    <label>Change Item</label>
    <referenceTo>ChangeItem__c</referenceTo>
    <relationshipLabel>Backup Items</relationshipLabel>
    <relationshipName>BackupItems</relationshipName>
    <type>Lookup</type>
</CustomField>