force-app/main/default/objects/BackupItem__c/fields/DeploymentRun__c.field-meta.xml
<CustomField>
    <fullName>DeploymentRun__c</fullName>
    <description>The deployment run this backup was created for</description>
    <label>Deployment Run</label>
    <referenceTo>DeploymentRun__c</referenceTo>
    <relationshipLabel>Backup Items</relationshipLabel>
    <relationshipName>BackupItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>