force-app/main/default/objects/BackupItem__c/fields/MetadataDocumentId__c.field-meta.xml
<CustomField>
    <fullName>MetadataDocumentId__c</fullName>
    <description>Reference to the Salesforce File containing the metadata XML</description>
    <label>Metadata Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>