force-app/main/default/objects/BackupItem__c/fields/OriginalApiVersion__c.field-meta.xml
<CustomField>
    <fullName>OriginalApiVersion__c</fullName>
    <description>API version of the component before upgrade</description>
    <label>Original API Version</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>