force-app/main/default/objects/BackupItem__c/fields/RelatedTestClassesJson__c.field-meta.xml
<CustomField>
    <fullName>RelatedTestClassesJson__c</fullName>
    <description>JSON array of related test class information</description>
    <label>Related Test Classes JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>