force-app/main/default/objects/BackupItem__c/fields/RestoredAt__c.field-meta.xml
<CustomField>
    <fullName>RestoredAt__c</fullName>
    <description>Date and time when this backup was restored</description>
    <label>Restored At</label>
    <type>DateTime</type>
</CustomField>