force-app/main/default/objects/BackupItem__c/fields/RestoreErrorDetails__c.field-meta.xml
<CustomField>
    <fullName>RestoreErrorDetails__c</fullName>
    <description>Error details if restore failed</description>
    <label>Restore Error Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>