force-app/main/default/objects/BackupItem__c/fields/RestoreStatus__c.field-meta.xml
<CustomField>
    <fullName>RestoreStatus__c</fullName>
    <description>Current restore status of this backup item</description>
    <label>Restore Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotRestored</fullName>
                <default>true</default>
                <label>Not Restored</label>
            </value>
            <value>
                <fullName>Restoring</fullName>
            </value>
            <value>
                <fullName>Restored</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>